syntax = "proto3";
package pb;

message ProgressBar {
  string id = 1;
  uint32 progress = 2;
}
